featrue: link to notion page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 Hello World
 <script>
-console.log('hi');
+  location.href='https://www.notion.so/Jeongwon-s-blog-42c6aff1d5294e23afa990ee667a8dc3';
 </script>
 </body>
 </html>
